--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -15,11 +15,7 @@ python = "^3.11"
 click = "^8.2.1"
 # When updating the grpcio-tools version, also update the minimum grpcio version
 # and regenerate gRPC stubs.
-grpcio-tools = [
-  { version = "1.49.1", python = ">=3.9,<3.12" },
-  { version = "1.59.0", python = ">=3.12,<3.13" },
-  { version = "1.67.0", python = "^3.13" },
-]
+grpcio-tools = ">=1.73.1"
 mypy-protobuf = ">=3.6"
 
 [tool.poetry.group.lint.dependencies]
