--- a/packages/ni.datamonikers.v1/pyproject.toml
+++ b/packages/ni.datamonikers.v1/pyproject.toml
@@ -31,15 +31,16 @@ classifiers = [
 packages = [{ include = "ni", from = "src" }]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
-protobuf = { version = ">=4.21" }
-nitypes = { version = ">=0.1.0dev3", allow-prereleases = true }
-ni-protobuf-types = { path = "../ni.protobuf.types" }
 grpcio = "^1.73.1"
-ni-measurementlink-discovery-v1 = {path = "../ni.measurementlink.discovery.v1"}
-ni-apis-python = {path = "../ni.apis.python"}
+ni-apis-python = { git = "https://github.com/ni/ni-apis-python.git", branch = "users/pkurlak/add-services", subdirectory = "packages/ni.apis.python" }
+ni-measurementlink-discovery-v1 = { git = "https://github.com/ni/ni-apis-python.git", branch = "users/pkurlak/add-services", subdirectory = "packages/ni.measurementlink.discovery.v1" }
+nitypes = { version = ">=0.1.0dev3", allow-prereleases = true }
+protobuf = { version = ">=4.21" }
+python = ">=3.11,<3.12"
 
 [tool.poetry.group.dev.dependencies]
+ni-apis-python = { path = "../ni.apis.python" }
+ni-measurementlink-discovery-v1 = { path = "../ni.measurementlink.discovery.v1" }
 types-grpcio = ">=1.0"
 types-protobuf = ">=4.21"
 
