--- a/packages/ni.measurements.data.v1/pyproject.toml
+++ b/packages/ni.measurements.data.v1/pyproject.toml
@@ -31,15 +31,15 @@ classifiers = [
 packages = [{ include = "ni", from = "src" }]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
-protobuf = { version = ">=4.21" }
+ni-apis-python = { git = "https://github.com/ni/ni-apis-python.git", branch = "users/pkurlak/add-services", subdirectory = "packages/ni.apis.python" }
+ni-measurementlink-discovery-v1 = { git = "https://github.com/ni/ni-apis-python.git", branch = "users/pkurlak/add-services", subdirectory = "packages/ni.measurementlink.discovery.v1" }
 nitypes = { version = ">=0.1.0dev3", allow-prereleases = true }
-ni-measurements-metadata-v1 = {path = "../ni.measurements.metadata.v1"}
-ni-protobuf-types = {path = "../ni.protobuf.types"}
-ni-datamonikers-v1 = {path = "../ni.datamonikers.v1"}
-ni-measurementlink-discovery-v1 = {path = "../ni.measurementlink.discovery.v1"}
+protobuf = { version = ">=4.21" }
+python = ">=3.11,<3.12"
 
 [tool.poetry.group.dev.dependencies]
+ni-apis-python = { path = "../ni-apis-python" }
+ni-measurementlink-discovery-v1 = { path = "../ni.measurementlink.discovery.v1" }
 types-grpcio = ">=1.0"
 types-protobuf = ">=4.21"
 
