Skip pypy3.11 for grpc_generator, too, since it hangs during install.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -37,7 +37,7 @@ jobs:
           package-name: ni.panels.v1.proto
       # Run grpc_generator unit tests on its oldest supported version.
       - name: Run and upload unit tests - grpc_generator
-        if: ${{ !contains(fromJSON('["3.9", "3.10", "pypy3.10"]'), matrix.python-version) }}
+        if: ${{ !contains(fromJSON('["3.9", "3.10", "pypy3.10", "pypy3.11"]'), matrix.python-version) }}
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: grpc_generator
