--- a/.github/workflows/check_docs.yml
+++ b/.github/workflows/check_docs.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Upload docs artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: nitypes-docs
+          name: ${{ inputs.package-name }}-docs
           path: packages/${{ inputs.package-name }}/docs/_build/
