--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -63,7 +63,7 @@ sphinx-rtd-theme = ">=1.0.0"
 sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
 toml = ">=0.10.2"
-tomlkit = ">=0.11.0"
+# tomlkit = ">=0.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.8"]
