Add docs for ni.protobuf.types and a workflow to generate docs. (#28)
* Add docs for ni.protobuf.types and a workflow to generate docs.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Exclude the docs folder for some linting operations.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Add missing dependencies.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Apply suggestions from code review

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Address review feedback.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Remove an 'autogenerated by' notice from the top of each module.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Use a custom template to improve the API Reference page.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Use a custom template and implicit namespace settings with some custom exclusions for classes in conversion python files.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Remove commented dependency.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

---------

Signed-off-by: Michael Johansen <michael.johansen@ni.com>
Co-authored-by: Michael Johansen <michael.johansen@ni.com>
Co-authored-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,12 @@ jobs:
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ni.panels.v1.proto
+  check_docs_ni_protobuf_types:
+    name: Check docs ni.protobuf.types
+    uses: ./.github/workflows/check_docs.yml
+    needs: [check_ni_protobuf_types]
+    with:
+      package-name: ni.protobuf.types
   run_unit_tests:
     name: Run unit tests
     uses: ./.github/workflows/run_unit_tests.yml
