--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -37,6 +37,7 @@ jobs:
           package-name: ni.panels.v1.proto
       # Run grpc_generator unit tests on its oldest supported version.
       - name: Run and upload unit tests - grpc_generator
+        if: ${{ !contains(fromJSON('["3.9", "3.10"]'), matrix.python-version) }}
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: grpc_generator
