Change version from 'dummy' to 'unused' to denote that the value is not used in subsequent steps in the non-release case.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,7 +61,7 @@ jobs:
             echo "package_version=$PKG_VERSION" >> $GITHUB_OUTPUT
           else
             echo "package_name=${{ inputs.package-name }}" >> $GITHUB_OUTPUT
-            echo "package_version=dummy" >> $GITHUB_OUTPUT
+            echo "package_version=unused" >> $GITHUB_OUTPUT
           fi
   check_package:
     name: Check ${{ needs.get_package_name_and_version.outputs.package_name }}
