--- a/packages/ni.panels.v1.proto/pyproject.toml
+++ b/packages/ni.panels.v1.proto/pyproject.toml
@@ -61,6 +61,7 @@ Sphinx = { version = ">=8.2", python = "^3.11" }
 sphinx-rtd-theme = ">=1.0.0"
 sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
+toml = ">=0.10.2"
 
 [build-system]
 requires = ["poetry-core>=1.8"]
