--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -3,6 +3,11 @@ name: Check codegen up to date
 on:
   workflow_call:
     inputs:
+      package-name:
+        description: 'The name of the package to check.'
+        default: ''
+        required: true
+        type: string
       proto-basepath:
         description: 'The base path for proto files used for generation.'
         default: '../../third_party/ni-apis'
@@ -25,7 +30,7 @@ on:
 
 jobs:
   check_codegen:
-    name: Check codegen up to date
+    name: Check codegen up to date for ${{ inputs.package-name }}
     runs-on: ubuntu-latest
     defaults:
       run:
