--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,9 +60,9 @@ jobs:
             echo "package-name=${{ inputs.package-name }}" >> $GITHUB_OUTPUT
             echo "package-version=unused" >> $GITHUB_OUTPUT
           fi
-  check_package:
-    name: Check ${{ needs.get_package_info.outputs.package-name }}
-    uses: ./.github/workflows/check_package.yml
+  check_analyzers:
+    name: Check analyzers for ${{ needs.get_package_info.outputs.package-name }}
+    uses: ./.github/workflows/check_analyzers.yml
     needs: get_package_info
     with:
       package-name: ${{ needs.get_package_info.outputs.package-name }}
@@ -75,7 +75,7 @@ jobs:
   build_package:
     name: Build ${{ needs.get_package_info.outputs.package-name }}
     runs-on: ubuntu-latest
-    needs: [get_package_info, check_package, check_docs]
+    needs: [get_package_info, check_analyzers, check_docs]
     steps:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
