--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,16 @@ jobs:
     with:
       package-name: ${{ matrix.package-name }}
       proto-subpath: ${{ matrix.proto-subpath }}
+  check_analyzers_grpc_gen:
+    name: Check analyzers for grpc_generator
+    uses: ./.github/workflows/check_analyzers.yml
+    with:
+      package-name: grpc_generator
+      package-base-path: tools
   run_unit_tests:
     name: Run unit tests
     uses: ./.github/workflows/run_unit_tests.yml
-    needs: [check_package]
+    needs: [check_package, check_analyzers_grpc_gen]
   report_test_results:
     name: Report test results
     uses: ./.github/workflows/report_test_results.yml
