--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,8 @@ jobs:
             proto-subpath: ni/protobuf/types
           - package-name: ni.panels.v1.proto
             proto-subpath: ni/panels/v1
+          - package-name: ni.measurementlink
+            proto-subpath: ni/measurementlink
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
