--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,6 +20,9 @@ jobs:
           - package-name: ni.panels.v1.proto
             proto-subpath: ni/panels/v1
             output-format: submodule
+          - package-name: ni.measurementlink.discovery.v1.proto
+            proto-subpath: ni/measurementlink/discovery/v1
+            output-format: subpackage
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
