Include ni.measurementlink.discovery.v1.proto in publish options

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ on:
             - none
             - ni.panels.v1.proto
             - ni.protobuf.types
+            - ni.measurementlink.discovery.v1.proto
 
 env:
   environment: ${{ github.event_name == 'release' && 'pypi' || inputs.environment }}
