Add ni.measurementlink.discovery.v1.proto package (#58)
* Add discovery.v1 package

* Distinguish subpackage vs submodule

* Remove check for discovery.v1 package - it's new

* Explicitly pass the output-format

* Add .proto to discovery namespace

* Remove some dependencies

* Exclude __init__.py

* Exclude __init__.py from pyright and also remove PyPy references

* Remove incorrect line

* Exclude __init__.py* to exclude __init__.pyi

* Test to see if docs will build with same content as ni.protobuf.types

* Get the discovery docs building. Probably not working correctly, but building so we can proceed

* Additional PR feedback and cleanup

* Include ni.measurementlink.discovery.v1.proto in publish options

* Minor updates from PR feedback

* Add back in the extensions

* Add back intersphinx mapping

* Put in AB#3233030 to remember to restore docs

--- a/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.proto/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "ni.protobuf.types"
-version = "0.1.0-dev2"
+name = "ni.measurementlink.discovery.v1.proto"
+version = "0.1.0-dev0"
 license = "MIT"
-description = "Protobuf data types for NI gRPC APIs"
+description = "Protobuf data types for NI discovery gRPC APIs"
 authors = ["NI <opensource@ni.com>"]
 maintainers = [
   "Brad Keryan <brad.keryan@emerson.com>",
@@ -10,7 +10,7 @@ maintainers = [
 ]
 readme = "README.md"
 repository = "https://github.com/ni/ni-apis-python"
-keywords = ["ni-apis", "protobuf"]
+keywords = ["ni-apis", "discovery"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
@@ -32,7 +32,6 @@ packages = [{include = "ni", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 protobuf = {version=">=4.21"}
-nitypes = {version=">=0.1.0dev3", allow-prereleases=true}
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
@@ -74,7 +73,7 @@ skips = [
 ]
 
 [tool.ni-python-styleguide]
-extend_exclude = "docs,*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi"
+extend_exclude = "docs,*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi,src/ni/measurementlink/discovery/v1/**/__init__.py"
 
 [tool.black]
 extend-exclude = 'docs/|_pb2(_grpc)?\.(py|pyi)$'
@@ -90,7 +89,7 @@ exclude = ["docs"]
 
 [tool.pyright]
 include = ["src/", "tests/"]
-exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi"]
+exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi", "src/ni/measurementlink/discovery/v1/**/__init__.py*"]
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
