Fix mypy errors. Do not run it on __init__.py*

--- a/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
@@ -86,7 +86,11 @@ files = "."
 namespace_packages = true
 strict = true
 explicit_package_bases = true
-exclude = ["docs"]
+exclude = [
+    "docs",
+    ".*\\.pyi$",
+    ".*\\.py$",
+]
 
 [tool.pyright]
 include = ["src/", "tests/"]
