Suppress mypy errors

--- a/packages/ni.measurementlink.proto/pyproject.toml
+++ b/packages/ni.measurementlink.proto/pyproject.toml
@@ -90,6 +90,7 @@ exclude = [
     "docs",
     ".*\\.pyi$",
 ]
+disable_error_code = ["no-untyped-call", "name-defined"]
 
 [tool.pyright]
 include = ["src/", "tests/"]
