--- a/packages/ni.measurementlink.measurement.v2.proto/.readthedocs.yaml
+++ b/packages/ni.measurementlink.measurement.v2.proto/.readthedocs.yaml
@@ -10,7 +10,7 @@ build:
     post_create_environment:
       - pip install poetry==1.8.2
     post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry -C packages/ni.measurementlink.discovery.v2.proto install --only main,docs
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry -C packages/ni.measurementlink.measurement.v2.proto install --only main,docs
 
 sphinx:
-  configuration: packages/ni.measurementlink.discovery.v2.proto/docs/conf.py
+  configuration: packages/ni.measurementlink.measurement.v2.proto/docs/conf.py
